# actix-web-middleware-oso

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: main.rs
src/: errors.rs  extractor.rs  lib.rs  middleware.rs
tests/: common.rs  test_oso_authz.rs  test_oso_extractor.rs
