[package]
name = "actix-web-middleware-oso"
description = "actix-web authorization middleware with Oso"
authors = ["josh rotenberg <joshrotenberg@gmail.com>"]
license = "MIT/Apache-2.0"
version = "0.1.0"
readme = "README.md"
documentation = "https://docs.rs/actix-web-middleware-oso"
repository = "https://github.com/joshrotenberg/actix-web-middleware-oso.git"
edition = "2021"

[lib]
name = "actix_web_middleware_oso"
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4.0.1", default_features = false }
actix-service = "2"
actix-utils = "3"
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
futures-core = { version = "0.3.7", default-features = false }
oso = "0.26.0"

[dev-dependencies]
actix-rt = "2"
actix-web = { version = "4", default_features = false, features = ["macros"] }
anyhow = "1.0.55"
