[package]
name = "actix-web-middleware-oso"
description = "actix-web authorization middleware with Oso"
authors = ["josh rotenberg <joshrotenberg@gmail.com>"]
license = "MIT/Apache-2.0"
version = "0.1.0"
readme = "README.md"
documentation = "https://docs.rs/actix-web-middleware-oso"
repository = "https://github.com/joshrotenberg/actix-web-middleware-oso.git"
edition = "2021"

[lib]
name = "actix_web_middleware_oso"
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4.0.1", default_features = false }
actix-utils = "3"
actix-service = "2"
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
oso = "0.26.0"

[dev-dependencies]
actix-rt = "2"
actix-web = { version = "4.0.1", default_features = false, features = ["macros"] }
env_logger = "0.9"
log = "0.4"